# discord_classroom

./: .gitignore  README.md  disclass.yaml  quizz_example.yaml
disclass/: Cargo.toml
disclass/src/: main.rs
disclass/src/commands/: db.rs  meta.rs  mod.rs  quizz.rs  runtask.rs
disclass/src/database/: main.rs  models.rs
