[package]
name = "disclass"
version = "0.1.0"
authors = ["Bruno Rocha <rochacbruno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]
version = "0.8"
# path = "/home/rochacbruno/Projects/discord_classroom/serenity"
